# pbi-mcp

./: .gitignore  README.md  api.py  main.py  mcp.py  package-lock.json  powerbi_client.py  powerbi_connect.ipynb  pyproject.toml
agent-service/: package-lock.json  package.json  server.js
pbiChatVisual/: package-lock.json  package.json  pbiviz.json  webpack.statistics.dev.html  webpack.statistics.prod.html
pbiChatVisual/src/: visual.ts
pbiChatVisual/style/: visual.less
