[project]
name = "pbi-mcp"
version = "0.1.0"
description = "MCP server for Power BI semantic model access"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.25.1",
    "fastmcp>=2.14.4",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "pandas>=3.0.0",
    "pythonnet>=3.0.5",
    "requests>=2.32.5",
    "semantic-link>=0.13.0",
]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.128.0",
]
