[project]
name = "pbi-mcp"
version = "0.1.0"
description = "MCP server for Power BI semantic model access"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.25.1",
    "fastapi[standard]>=0.128.0",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "agent-framework[openai]>=0.2.0",
    "pandas>=3.0.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
